# cowcatcher

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  config.json  pyproject.toml
.github/workflows/: ci.yaml
example/: compose.yml  config.json  config.json.example
src/aidetector/: __init__.py  config.py  detector.py  manager.py
src/aidetector/exporters/: disk.py  exporter.py  telegram.py
src/cowcatcher/: __init__.py  aiDetection.py  config.json  config.py  cowcatcherai.py  detector.py  exporter.py  homeassistantnotifier.py  ipcameras.py  manager.py  multithreading.py  notifier.py  saveimage.py  telegramnotifier.py
src/cowcatcher/exporters/: disk.py  exporter.py  factory.py  telegram.py
test/: config.json
