[project]
name = "aidetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onnx>=1.19.1",
    "pydantic>=2.11.10",
    "ultralytics>=8.3.214",
    "onnxruntime-gpu>=1.23.0; platform_system != 'Darwin' and platform_machine != 'aarch64'",
    "onnxruntime>=1.23.0; platform_system == 'Darwin' or platform_machine == 'aarch64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "aidetector:main"

[dependency-groups]
dev = [
    "ruff>=0.6.2",
    "ty>=0.0.1a22",
]
