[project]
name = "aidetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "executorch>=1.0.0",
    "pydantic>=2.12.3",
    "ultralytics>=8.3.221",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "aidetector:main"

[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "ty>=0.0.1a24",
]
